WIP At project/branch switch make sure panel is reactivated (#1362)
WIP Exit split-panel mode at project/branch switches.

WIP Smaller splitter and no snap area.

WIP Use margin when determining currentSplitter.
Add min size

WIP add "Exit split mode" option.

WIP Resizing working (however truncation can lead to issues)

WIP relPos are updated at splitter-move and panel-add/del.
TODO: Resize of entire panel.

WIP splitter boundaries working.
TODO: Start position and update of relpos during resizes etc.

WIP Logic for assigning new splitter implemented.
TODO: Resizing start points and boundaries.

WIP Start on reassigning currentSplitter.

Lengths of splitters updated accordingly.
deletePanel somewhat working..

WIP Can add multiple panels and somewhat resize.
TODO: Removing panels.
TODO: Update splitters lengths after resize.
TODO: Splitter resize region.
TODO: External resize.

WIP Assign splitters accordingly.

WIP add split control.

WIP Split panel registers on mousedown, click and mouseup.
Do not setActive of a Panel that is active already.

WIP Fix issue with Visualizer being destroyed at SP-shift.

WIP Two panels are somewhat functional again.

WIP Ensure activeObject is emitted by clearing it silently first

WIP Remove references to state in order to clean the API.

--- a/src/client/js/Panels/SplitPanel/styles/SplitPanel.css
+++ b/src/client/js/Panels/SplitPanel/styles/SplitPanel.css
@@ -3,28 +3,32 @@
  * 
  * Author: Robert Kereskenyi
  */
+ul.split-panel-dropdown-list {
+  min-width: 205px; }
+  ul.split-panel-dropdown-list a.dropdown-list-button {
+    padding-left: 10px; }
+    ul.split-panel-dropdown-list a.dropdown-list-button .split-panel-dropdown-icon {
+      float: left;
+      margin-right: 8px;
+      margin-top: 2px; }
+
 .split-panel {
   position: absolute;
   top: 0;
   left: 0;
   margin: 0; }
-  .split-panel .p1,
-  .split-panel .p2 {
+  .split-panel .split-panel-panel-container {
     position: absolute;
     overflow: hidden; }
   .split-panel .splitter {
     z-index: 1000;
-    background: #DDD;
-    border: 0x solid #BBB;
     position: absolute;
     box-sizing: border-box; }
     .split-panel .splitter.vertical {
-      border-left-width: 1px;
-      border-right-width: 1px;
+      border-left: #DDD solid 2px;
       cursor: ew-resize; }
     .split-panel .splitter.horizontal {
-      border-top-width: 1px;
-      border-bottom-width: 1px;
+      border-top: #DDD solid 2px;
       cursor: ns-resize; }
     .split-panel .splitter.resize {
       background-color: #C4E1A4; }
